# devtidy

./: README.md  pyproject.toml
src/devtidy/: __init__.py  __main__.py  cli.py  models.py  rules.py  safety.py  scanner.py  storage.py  ui.py  units.py
tests/: test_cli.py  test_scanner.py  test_storage.py  test_units.py
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json
vscode-extension/src/: cli.ts  extension.ts  format.ts  tree.ts
