[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "devtidy"
version = "0.2.0"
description = "Safely find and reclaim stale developer build artifacts and environments."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Harish" }
]
keywords = ["cleanup", "developer-tools", "disk-space", "node-modules", "virtualenv"]
dependencies = [
  "rich>=13.9",
  "rich-argparse>=1.7",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]

[project.scripts]
devtidy = "devtidy.cli:main"

[project.urls]
Homepage = "https://github.com/harish-ai-engineer/devtidy"
Repository = "https://github.com/harish-ai-engineer/devtidy.git"
Issues = "https://github.com/harish-ai-engineer/devtidy/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
